Solucionar las referencia de proyectos y creación de carpetas de Models; Creación de nuevas clases de DTO; Agregar cadenas y enlace a conexión a la BD para ambos dispositivos LAPTOP y PC.

--- a/API_INOVATECH/appsettings.json
+++ b/API_INOVATECH/appsettings.json
@@ -1,8 +1,10 @@
 {
   // TODO: ¿Qué es la siguiente línea "AD\\SQLEXPRESS2017", la parte de "AD"?
   //       Además buscar la cuenta y contraseña del SQL Server Management Studio.
+  //       Además ¿Qué significa "PROD" y UsuarioRepDTO?
   "ConnectionStrings": {
-    "PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= sql2017; initial catalog = db_inovatech"
+    "PROD": "data source =  PC-LOZADA\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
+    //"PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
   },
 
   "Logging": {
