--- a/API_INOVATECH/appsettings.json
+++ b/API_INOVATECH/appsettings.json
@@ -3,8 +3,8 @@
   //       Además buscar la cuenta y contraseña del SQL Server Management Studio.
   //       Además ¿Qué significa "PROD" y UsuarioRepDTO?
   "ConnectionStrings": {
-    "PROD": "data source =  PC-LOZADA\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
-    //"PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
+    //"PROD": "data source =  PC-LOZADA\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
+    "PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
   },
 
   "Logging": {
