Correcion de ConsultaTodo (Usuario)

--- a/API_INOVATECH/appsettings.json
+++ b/API_INOVATECH/appsettings.json
@@ -4,7 +4,8 @@
   //       Además ¿Qué significa "PROD" y UsuarioRepDTO?
   "ConnectionStrings": {
     //"PROD": "data source =  PC-LOZADA\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
-    "PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
+    //"PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech",
+    "PROD": "data source = LIZ-PC\\SQLEXPRESS; Integrated Security=SSPI; initial catalog = db_inovatech"
   },
 
   "Logging": {
