--- a/API_INOVATECH/appsettings.json
+++ b/API_INOVATECH/appsettings.json
@@ -1,11 +1,8 @@
 {
-  // TODO: ¿Qué es la siguiente línea "AD\\SQLEXPRESS2017", la parte de "AD"?
-  //       Además buscar la cuenta y contraseña del SQL Server Management Studio.
-  //       Además ¿Qué significa "PROD" y UsuarioRepDTO?
   "ConnectionStrings": {
-    //"PROD": "data source =  PC-LOZADA\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
+    "PROD": "data source =  PC-LOZADA\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech"
     //"PROD": "data source = LAPTOP-ORIP8NS7\\SQLEXPRESS; user id = sa; pwd= SAbrandy10$; initial catalog = db_inovatech",
-    "PROD": "data source = LIZ-PC\\SQLEXPRESS; Integrated Security=SSPI; initial catalog = db_inovatech"
+    //"PROD": "data source = LIZ-PC\\SQLEXPRESS; Integrated Security=SSPI; initial catalog = db_inovatech"
   },
 
   "Logging": {
