Implementar cambios grandes.

--- a/API_INOVATECH/appsettings.json
+++ b/API_INOVATECH/appsettings.json
@@ -11,5 +11,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "localhost"
+  "AllowedHosts": "*", // *
+  "settings": {
+    "secretkey":  "DonOmarElRey"
+  }
 }
