--- a/API_INOVATECH/API_INOVATECH.csproj
+++ b/API_INOVATECH/API_INOVATECH.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.0" />
+    <PackageReference Include="Twilio.AspNet.Common" Version="8.0.1" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="8.0.1" />
+	  <PackageReference Include="Twilio.AspNet.Mvc" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
